--- a/service-consumer-nacos-feign/src/main/resources/application.yml
+++ b/service-consumer-nacos-feign/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 10112
+  port: 11121
 spring:
   application:
-    name: nacos-service-order
+    name: feign-nacos-service-order
   cloud:
     nacos:
       discovery:
